packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_strip_client_code.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 1930
expression: output
---
==INPUT==


import { component$, useClientMount$, useStore, useTask$ } from '@qwik.dev/core';
import mongo from 'mongodb';
import redis from 'redis';
import threejs from 'threejs';
import { a } from './keep';
import { b } from '../keep2';
import { c } from '../../remove';

export const Parent = component$(() => {
	const state = useStore({
		text: ''
	});

	// Double count watch
	useClientMount$(async () => {
		state.text = await mongo.users();
		redis.set(state.text, a, b, c);
	});

	useTask$(() => {
		// Code
	});

	return (
		<div
			shouldRemove$={() => state.text}
			onClick$={() => console.log('parent', state, threejs)}
		>
			<Div
				onClick$={() => console.log('keep')}
				render$={() => state.text}
			/>
			{state.text}
		</div>
	);
});

============================= components/component.js ==

import "./keep";
import "../keep2";
import { componentQrl } from "@qwik.dev/core";
import { useClientMountQrl } from "@qwik.dev/core";
import { _noopQrl } from "@qwik.dev/core";
import { useTaskQrl } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { _captures } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { useStore } from '@qwik.dev/core';
//
const Parent_component_div_Div_onClick_kgowuto5dR0 = ()=>console.log('keep');
const Parent_component_div_Div_render_CkMybN6xzQk = ()=>{
    const state = _captures[0];
    return state.text;
};
const Parent_component_useTask_ngmvcygWux8 = ()=>{
// Code
};
//
const _qrl_Parent_component_div_Div_onClick_kgowuto5dR0 = /*#__PURE__*/ inlinedQrl(Parent_component_div_Div_onClick_kgowuto5dR0, "Parent_component_div_Div_onClick_kgowuto5dR0");
const _qrl_Parent_component_div_Div_render_CkMybN6xzQk = /*#__PURE__*/ inlinedQrl(Parent_component_div_Div_render_CkMybN6xzQk, "Parent_component_div_Div_render_CkMybN6xzQk");
const _qrl_Parent_component_useTask_ngmvcygWux8 = /*#__PURE__*/ inlinedQrl(Parent_component_useTask_ngmvcygWux8, "Parent_component_useTask_ngmvcygWux8");
const _qrl_qrl_4294901760 = /*#__PURE__*/ _noopQrl("Parent_component_useClientMount_Yn2kIDABoYw");
const _qrl_qrl_4294901764 = /*#__PURE__*/ _noopQrl("Parent_component_div_shouldRemove_EBj69wTX1do");
const _qrl_qrl_4294901766 = /*#__PURE__*/ _noopQrl("Parent_component_div_q_e_click_oqNnfO6ubjU");
//
const Parent_component_t6Wy3C0Q0XM = ()=>{
    const state = useStore({
        text: ''
    });
    // Double count watch
    useClientMountQrl(_qrl_qrl_4294901760.$withCaptures$([
        state
    ]));
    useTaskQrl(_qrl_Parent_component_useTask_ngmvcygWux8);
    return /*#__PURE__*/ _jsxSorted("div", {
        "q:p": state
    }, {
        shouldRemove$: _qrl_qrl_4294901764,
        "q-e:click": _qrl_qrl_4294901766
    }, [
        /*#__PURE__*/ _jsxSorted(Div, null, {
            onClick$: _qrl_Parent_component_div_Div_onClick_kgowuto5dR0,
            render$: _qrl_Parent_component_div_Div_render_CkMybN6xzQk.$withCaptures$([
                state
            ])
        }, null, 3, "7R_0"),
        _wrapProp(state, "text")
    ], 5, "7R_1");
};
//
const _qrl_Parent_component_t6Wy3C0Q0XM = /*#__PURE__*/ inlinedQrl(Parent_component_t6Wy3C0Q0XM, "Parent_component_t6Wy3C0Q0XM");
//
export const Parent = /*#__PURE__*/ componentQrl(_qrl_Parent_component_t6Wy3C0Q0XM);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/components/component.tsx\"],\"names\":[],\"mappings\":\";;;;;;;;;;AACA,SAAsC,QAAQ,QAAkB,iBAAiB;;qDA6BnE,IAAM,QAAQ,GAAG,CAAC;oDACnB;;WAAM,MAAM,IAAI;;6CAXnB;AACR,OAAO;AACR;;;;;;;;;qCAbgC;IAChC,MAAM,QAAQ,SAAS;QACtB,MAAM;IACP;IAEA,qBAAqB;IACrB;;;IAKA;IAIA,qBACC,WAAC;;;QACA,aAAa;QACb,WAAQ;;sBAER,WAAC;YACA,QAAQ;YACR,OAAO;;;;kBAEP;;AAGJ;;;;AA3BA,OAAO,MAAM,uBAAS,gDA2BnB\"}")
== DIAGNOSTICS ==

[]
