packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_transpile_ts_only.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 2626
expression: output
---
==INPUT==


import { component$, useStore } from '@qwik.dev/core';

export const App = component$((props: Stuff) => {
	return (
		<Cmp>
			<p class="stuff" onClick$={() => console.log('warn')}>Hello Qwik</p>
		</Cmp>
	);
});

============================= test.jsx ==

import { componentQrl } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
//
const App_component_Cmp_p_q_e_click_Yl4ybrJWrt4 = ()=>console.log('warn');
//
const _qrl_App_component_Cmp_p_q_e_click_Yl4ybrJWrt4 = /*#__PURE__*/ inlinedQrl(App_component_Cmp_p_q_e_click_Yl4ybrJWrt4, "App_component_Cmp_p_q_e_click_Yl4ybrJWrt4");
//
const App_component_ckEPmXZlub0 = (props)=>{
    return <Cmp>
			<p class="stuff" q-e:click={_qrl_App_component_Cmp_p_q_e_click_Yl4ybrJWrt4}>Hello Qwik</p>
		</Cmp>;
};
//
const _qrl_App_component_ckEPmXZlub0 = /*#__PURE__*/ inlinedQrl(App_component_ckEPmXZlub0, "App_component_ckEPmXZlub0");
//
export const App = /*#__PURE__*/ componentQrl(_qrl_App_component_ckEPmXZlub0);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;kDAM8B,IAAM,QAAQ,GAAG,CAAC;;;;kCAHlB,CAAC;IAC9B,QACE,IAAI;GACJ,CAAC,EAAE,MAAM,QAAQ,2DAAqC,UAAU,EAAE,EAAE;EACrE,EAAE;AAEJ;;;;AANA,OAAO,MAAM,oBAAM,6CAMhB\"}")
== DIAGNOSTICS ==

[]
