packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_use_optimization.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 679
expression: output
---
==INPUT==


import { $, component$, useTask$ } from '@qwik.dev/core';
import { CONST } from 'const';
export const Works = component$((props) => {
	const {countNested} = useStore({value:{count:0}}).value;
	const countNested2 = countNested;
	const {hello} = countNested2;
	const bye = hello.bye;
	const {ciao} = bye.italian;


	return (
		<div ciao={ciao} >{foo}</div>
	);
});

============================= test.jsx ==

import { componentQrl } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
//
const Works_component_t45qL4vNGv0 = (props)=>{
    const store = useStore({
        value: {
            count: 0
        }
    });
    return <div ciao={store.value.countNested.hello.bye.italian.ciao}>{foo}</div>;
};
//
const _qrl_Works_component_t45qL4vNGv0 = /*#__PURE__*/ inlinedQrl(Works_component_t45qL4vNGv0, "Works_component_t45qL4vNGv0");
//
export const Works = /*#__PURE__*/ componentQrl(_qrl_Works_component_t45qL4vNGv0);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;oCAGgC,CAAC;IAChC,MAAM,QAAgB,SAAS;QAAC,OAAM;YAAC,OAAM;QAAC;IAAC;IAO/C,QACE,IAAI,MAJS,AADH,MAHsC,MAA3C,YAEA,MACW,GAAG,CACF,OAAO,CAAnB,OAIa,MAAM;AAE3B;;;;AAXA,OAAO,MAAM,sBAAQ,+CAWlB\"}")
== DIAGNOSTICS ==

[]
