packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_use_server_mount.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 1662
expression: output
---
==INPUT==


import { component$, useTask$, useStore, useStyles$ } from '@qwik.dev/core';
import mongo from 'mongodb';
import redis from 'redis';

export const Parent = component$(() => {
	const state = useStore({
		text: ''
	});

	// Double count watch
	useTask$(async () => {
		state.text = await mongo.users();
		redis.set(state.text);
	});

	return (
		<div onClick$={() => console.log('parent')}>
			{state.text}
		</div>
	);
});

export const Child = component$(() => {
	const state = useStore({
		text: ''
	});

	// Double count watch
	useTask$(async () => {
		state.text = await mongo.users();
	});

	return (
		<div onClick$={() => console.log('child')}>
			{state.text}
		</div>
	);
});

============================= test.tsx_Parent_component_useTask_gDH1EtUWqBU.js ==

import { _captures } from "@qwik.dev/core";
import mongo from "mongodb";
import redis from "redis";
//
export const Parent_component_useTask_gDH1EtUWqBU = async ()=>{
    const state = _captures[0];
    state.text = await mongo.users();
    redis.set(state.text);
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;oDAWU;;IACR,MAAM,IAAI,GAAG,MAAM,MAAM,KAAK;IAC9B,MAAM,GAAG,CAAC,MAAM,IAAI\"}")
/*
{
  "origin": "test.tsx",
  "name": "Parent_component_useTask_gDH1EtUWqBU",
  "entry": "test.tsx_entry_Parent",
  "displayName": "test.tsx_Parent_component_useTask",
  "hash": "gDH1EtUWqBU",
  "canonicalFilename": "test.tsx_Parent_component_useTask_gDH1EtUWqBU",
  "path": "",
  "extension": "js",
  "parent": "Parent_component_0TaiDayHrlo",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": true,
  "loc": [
    253,
    330
  ],
  "captureNames": [
    "state"
  ]
}
*/
============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const _qrl_Child_component_9GyF01GDKqw = /*#__PURE__*/ qrl(()=>import("./test.tsx_Child_component_9GyF01GDKqw"), "Child_component_9GyF01GDKqw");
const _qrl_Parent_component_0TaiDayHrlo = /*#__PURE__*/ qrl(()=>import("./test.tsx_Parent_component_0TaiDayHrlo"), "Parent_component_0TaiDayHrlo");
//
export const Parent = /*#__PURE__*/ componentQrl(_qrl_Parent_component_0TaiDayHrlo);
export const Child = /*#__PURE__*/ componentQrl(_qrl_Child_component_9GyF01GDKqw);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;AAKA,OAAO,MAAM,uBAAS,gDAgBnB;AAEH,OAAO,MAAM,sBAAQ,+CAelB\"}")
============================= test.tsx_Child_component_useTask_Oh4n7ZeqJkU.js ==

import { _captures } from "@qwik.dev/core";
import mongo from "mongodb";
//
export const Child_component_useTask_Oh4n7ZeqJkU = async ()=>{
    const state = _captures[0];
    state.text = await mongo.users();
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;mDA6BU;;IACR,MAAM,IAAI,GAAG,MAAM,MAAM,KAAK\"}")
/*
{
  "origin": "test.tsx",
  "name": "Child_component_useTask_Oh4n7ZeqJkU",
  "entry": "test.tsx_entry_Child",
  "displayName": "test.tsx_Child_component_useTask",
  "hash": "Oh4n7ZeqJkU",
  "canonicalFilename": "test.tsx_Child_component_useTask_Oh4n7ZeqJkU",
  "path": "",
  "extension": "js",
  "parent": "Child_component_9GyF01GDKqw",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": true,
  "loc": [
    541,
    593
  ],
  "captureNames": [
    "state"
  ]
}
*/
============================= test.tsx_Parent_component_0TaiDayHrlo.js ==

import { _jsxSorted } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
import { useTaskQrl } from "@qwik.dev/core";
//
const _qrl_Parent_component_div_q_e_click_zM9okM0TYrA = /*#__PURE__*/ qrl(()=>import("./test.tsx_Parent_component_div_q_e_click_zM9okM0TYrA"), "Parent_component_div_q_e_click_zM9okM0TYrA");
const _qrl_Parent_component_useTask_gDH1EtUWqBU = /*#__PURE__*/ qrl(()=>import("./test.tsx_Parent_component_useTask_gDH1EtUWqBU"), "Parent_component_useTask_gDH1EtUWqBU");
//
export const Parent_component_0TaiDayHrlo = ()=>{
    const state = useStore({
        text: ''
    });
    // Double count watch
    useTaskQrl(_qrl_Parent_component_useTask_gDH1EtUWqBU.$withCaptures$([
        state
    ]));
    return /*#__PURE__*/ _jsxSorted("div", null, {
        "q-e:click": _qrl_Parent_component_div_q_e_click_zM9okM0TYrA
    }, _wrapProp(state, "text"), 3, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;;;4CAKiC;IAChC,MAAM,QAAQ,SAAS;QACtB,MAAM;IACP;IAEA,qBAAqB;IACrB;;;IAKA,qBACC,WAAC;QAAI,WAAQ;iBACX;AAGJ\"}")
/*
{
  "origin": "test.tsx",
  "name": "Parent_component_0TaiDayHrlo",
  "entry": "test.tsx_entry_Parent",
  "displayName": "test.tsx_Parent_component",
  "hash": "0TaiDayHrlo",
  "canonicalFilename": "test.tsx_Parent_component_0TaiDayHrlo",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    169,
    421
  ]
}
*/
============================= test.tsx_Child_component_div_q_e_click_cROa4sult1s.js (ENTRY POINT)==

export const Child_component_div_q_e_click_cROa4sult1s = ()=>console.log('child');


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"yDAkCiB,IAAM,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "Child_component_div_q_e_click_cROa4sult1s",
  "entry": null,
  "displayName": "test.tsx_Child_component_div_q_e_click",
  "hash": "cROa4sult1s",
  "canonicalFilename": "test.tsx_Child_component_div_q_e_click_cROa4sult1s",
  "path": "",
  "extension": "js",
  "parent": "Child_component_9GyF01GDKqw",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    624,
    650
  ]
}
*/
============================= test.tsx_Child_component_9GyF01GDKqw.js ==

import { _jsxSorted } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
import { useTaskQrl } from "@qwik.dev/core";
//
const _qrl_Child_component_div_q_e_click_cROa4sult1s = /*#__PURE__*/ qrl(()=>import("./test.tsx_Child_component_div_q_e_click_cROa4sult1s"), "Child_component_div_q_e_click_cROa4sult1s");
const _qrl_Child_component_useTask_Oh4n7ZeqJkU = /*#__PURE__*/ qrl(()=>import("./test.tsx_Child_component_useTask_Oh4n7ZeqJkU"), "Child_component_useTask_Oh4n7ZeqJkU");
//
export const Child_component_9GyF01GDKqw = ()=>{
    const state = useStore({
        text: ''
    });
    // Double count watch
    useTaskQrl(_qrl_Child_component_useTask_Oh4n7ZeqJkU.$withCaptures$([
        state
    ]));
    return /*#__PURE__*/ _jsxSorted("div", null, {
        "q-e:click": _qrl_Child_component_div_q_e_click_cROa4sult1s
    }, _wrapProp(state, "text"), 3, "u6_1");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;;;2CAuBgC;IAC/B,MAAM,QAAQ,SAAS;QACtB,MAAM;IACP;IAEA,qBAAqB;IACrB;;;IAIA,qBACC,WAAC;QAAI,WAAQ;iBACX;AAGJ\"}")
/*
{
  "origin": "test.tsx",
  "name": "Child_component_9GyF01GDKqw",
  "entry": "test.tsx_entry_Child",
  "displayName": "test.tsx_Child_component",
  "hash": "9GyF01GDKqw",
  "canonicalFilename": "test.tsx_Child_component_9GyF01GDKqw",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    457,
    683
  ]
}
*/
============================= test.tsx_Parent_component_div_q_e_click_zM9okM0TYrA.js (ENTRY POINT)==

export const Parent_component_div_q_e_click_zM9okM0TYrA = ()=>console.log('parent');


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"0DAiBiB,IAAM,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "Parent_component_div_q_e_click_zM9okM0TYrA",
  "entry": null,
  "displayName": "test.tsx_Parent_component_div_q_e_click",
  "hash": "zM9okM0TYrA",
  "canonicalFilename": "test.tsx_Parent_component_div_q_e_click_zM9okM0TYrA",
  "path": "",
  "extension": "js",
  "parent": "Parent_component_0TaiDayHrlo",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    361,
    388
  ]
}
*/
== DIAGNOSTICS ==

[]
